# pytest-learning-lab

./: .gitignore  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: learning-task.md
docs/: day13_pytest_fixtures_scopes.md  day14_mocking_fixtures.md  day21.md  day_11_fixtures_dynamic.md  day_12_scope_performance.md  day_15.md  day_16.md  day_17 spy vs mock.md  day_18 parametrizacion avanzada.md  day_19 cuando no parametrizar.md  day_20.md
pytest_uv_project.egg-info/: SOURCES.txt  requires.txt
src/app/: api_client.py  processor.py  (+1 more)
tests/: conftest.py  test_app_api_client.py  test_app_api_client_spy_mock.py  test_app_processor.py  test_app_validator.py  test_combined_param_fixture.py  test_db_function_scope.py  test_db_module_scope.py  test_db_session_scope.py  test_email_client.py  test_email_client_advanced.py  test_email_client_fixtures.py  test_email_client_responses.py  test_email_service_fixtures.py  test_email_service_mock.py  test_email_side_effects.py  test_financial.py  test_financial_api_mock.py  test_financial_io.py  test_financial_mixed.py  test_financial_remote_api.py  test_financial_spy_functions.py  test_fixture_tmpfile.py  test_fixture_yield.py  test_fixtures_dynamic.py  test_fixtures_email.py  test_mailing_mock.py  test_marks.py  test_math_ops.py  test_math_ops2.py  test_mock_email_service.py  test_param_fixture.py  test_parametrized_financial.py  test_payment_api_client_exceptions.py  test_payment_validator.py  test_payment_workflow.py  test_scope_demo.py  test_temp_db_fixture.py  test_users.py  test_workflow_notificador_integracion.py  (+4 more)
(+16 files in other folders)
