[project]
name = "pytest-uv-project"
version = "0.1.0"
description = "Proyecto de testing con pytest usando UV"
authors = [
    { name = "Luis", email = "subliandev@gmail.com" },
]

# ELIMINAMOS las dependencias por ahora para evitar problemas de build
# dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "rapidas: pruebas rápidas",
    "lentas: pruebas con operaciones costosas",
    "error_handling: validación de manejo de errores",
    "financial: pruebas de cálculos financieros válidos",
    "financial_error: validación de errores financieros",
    "mail: pruebas de envío de correo exitoso",
    "mail_error: validación de errores en correo",
    "api: pruebas de simulación de API externa",
    "api_error: validación de errores en simulación de API",
]
pythonpath = [
  "src"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"